--- a/build.gradle
+++ b/build.gradle
@@ -17,11 +17,13 @@ buildscript {
 //    kodeinComposeVersion = "7.5.0"
     coroutines_version = "1.5.2"
     rome_version = "1.7.1-f6"
-    moshi_version = "1.5.0"
+    moshi_version = "1.12.0"
     threetentest_version = "1.2.2"
     threetenabp_version = "1.2.2"
     jsoup_version = "1.7.3"
     readability4j_version = "1.0.5"
+    retrofit_version = "2.9.0"
+    qrgen_version = "2.6.0"
 
     androidx_core_version = "1.7.0"
     androidx_testcore_version = "1.4.0"
