--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,8 +22,8 @@ android {
 
   defaultConfig {
     applicationId "com.nononsenseapps.feeder"
-    versionCode 226
-    versionName "2.1.0-beta.1"
+    versionCode 227
+    versionName "2.1.0"
     compileSdkVersion 31
     minSdkVersion 23
     targetSdkVersion 31
