--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,10 @@
   <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
   <permission
-    android:name="vnd.rssprovider.permission.read"
+    android:name="com.nononsenseapps.feeder.permission.read"
     android:description="@string/permission_read_desc"
     android:label="@string/permission_read_label"
+    android:protectionLevel="normal"
     android:permissionGroup="android.permission-group.SOCIAL_INFO" />
 
   <queries>
@@ -170,6 +171,6 @@
       android:name=".contentprovider.RSSContentProvider"
       android:authorities="com.nononsenseapps.feeder.rssprovider"
       android:exported="true"
-      android:readPermission="vnd.rssprovider.permission.read" />
+      android:readPermission="com.nononsenseapps feeder.permission.read" />
   </application>
 </manifest>
