--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,8 +22,8 @@ android {
 
   defaultConfig {
     applicationId "com.nononsenseapps.feeder"
-    versionCode 245
-    versionName "2.2.4"
+    versionCode 246
+    versionName "2.2.4-1"
     compileSdkVersion 31
     minSdkVersion 23
     targetSdkVersion 31
