Fixed all restartable but not skippable functions

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -135,6 +135,26 @@ android {
   }
 }
 
+// https://chris.banes.dev/composable-metrics/
+// gw installDebugMini -Pmyapp.enableComposeCompilerReports=true
+// build/compose_metrics/[...]-composables.txt
+tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
+    kotlinOptions {
+        if (project.findProperty("myapp.enableComposeCompilerReports") == "true") {
+            freeCompilerArgs += [
+                    "-P",
+                    "plugin:androidx.compose.compiler.plugins.kotlin:reportsDestination=" +
+                            project.buildDir.absolutePath + "/compose_metrics"
+            ]
+            freeCompilerArgs += [
+                    "-P",
+                    "plugin:androidx.compose.compiler.plugins.kotlin:metricsDestination=" +
+                            project.buildDir.absolutePath + "/compose_metrics"
+            ]
+        }
+    }
+}
+
 configurations.all {
   resolutionStrategy {
 //    failOnVersionConflict()
