--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,11 @@
 
 buildscript {
   ext {
-    kotlin_version = "1.5.31"
+    // Compose compiler is highly coupled to Kotlin version
+    // See https://developer.android.com/jetpack/androidx/releases/compose-kotlin#pre-release_kotlin_compatibility
+    composeCompilerVersion = "1.3.0"
+    kotlin_version = "1.7.10"
+
     gradle_build_version = "7.0.0"
     build_tools_version = "30.0.3"
 
@@ -28,11 +32,9 @@ buildscript {
     androidx_core_version = "1.7.0"
     androidx_testcore_version = "1.4.0"
     workmanager_version = '2.7.0'
-    constraintlayout_version = "2.0.4"
-    recyclerview_version = "1.0.0"
     legacy_support_version = "1.0.0"
     appcompat_version = "1.3.0"
-    material_version = "1.1.0"
+    materialVersion = "1.6.1"
     preference_version = "1.1.0"
     test_runner_version = "1.4.0"
     test_rules_version = "1.4.0"
@@ -40,17 +42,18 @@ buildscript {
     savedstate_version = "1.1.0"
     room_version = "2.3.0"
     // Compose related below
-    nav_version = "2.4.0-alpha09"
-    activityComposeVersion = "1.3.1"
-    composeVersion = "1.1.0-beta03"
-    navigationComposeVersion = nav_version
+    navVersion = "2.5.1"
+    activityComposeVersion = "1.5.1"
+    navigationComposeVersion = navVersion
+    composeLibraryVersion = "1.2.1"
     pagingVersion = "3.0.0"
-    pagingComposeVersion = "1.0.0-alpha12"
+    pagingComposeVersion = "1.0.0-alpha16"
     accompanistVersion = "0.21.0-beta"
     coilVersion = "1.3.2"
-    androidWindowVersion = "1.0.0-beta02"
+    androidWindowVersion = "1.0.0"
 
     // Tests
+    junit_version = "4.13.2"
     espresso_version = "3.3.0"
 
     mockk_version = "1.9.3"
