--- a/build.gradle
+++ b/build.gradle
@@ -5,9 +5,9 @@ buildscript {
     // Compose compiler is highly coupled to Kotlin version
     // See https://developer.android.com/jetpack/androidx/releases/compose-kotlin#pre-release_kotlin_compatibility
     composeCompilerVersion = "1.3.0"
-    kotlin_version = "1.7.10"
+    kotlinVersion = "1.7.10"
 
-    gradle_build_version = "7.0.0"
+    gradleBuildVersion = '7.2.1'
     build_tools_version = "30.0.3"
 
     multi_dex_version = "1.0.3"
@@ -53,7 +53,7 @@ buildscript {
     androidWindowVersion = "1.0.0"
 
     // Tests
-    junit_version = "4.13.2"
+    junitVersion = "4.13.2"
     espresso_version = "3.3.0"
 
     mockk_version = "1.9.3"
@@ -66,8 +66,8 @@ buildscript {
     google()
   }
   dependencies {
-    classpath "com.android.tools.build:gradle:$gradle_build_version"
-    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    classpath "com.android.tools.build:gradle:$gradleBuildVersion"
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
 
     // NOTE: Do not place your application dependencies here; they belong
     // in the individual module build.gradle files
