--- a/app/build.gradle
+++ b/app/build.gradle
@@ -169,7 +169,7 @@ configurations.all {
 }
 
 dependencies {
-  kapt "androidx.room:room-compiler:$room_version"
+  kapt "androidx.room:room-compiler:$roomVersion"
 
   // BOMS
   api(platform("com.squareup.okhttp3:okhttp-bom:$okhttp_version"))
@@ -177,7 +177,8 @@ dependencies {
   // Needed pre SDK21
   implementation "com.android.support:multidex:$multi_dex_version"
 
-  implementation "androidx.room:room-ktx:$room_version"
+  implementation "androidx.room:room-ktx:$roomVersion"
+  implementation "androidx.room:room-paging:$roomVersion"
 
   implementation "androidx.work:work-runtime-ktx:$workmanager_version"
 
@@ -277,7 +278,7 @@ dependencies {
 
   androidTestImplementation "androidx.test:core:$androidx_testcore_version"
   androidTestImplementation "androidx.test:runner:$test_runner_version"
-  androidTestImplementation "androidx.room:room-testing:$room_version"
+  androidTestImplementation "androidx.room:room-testing:$roomVersion"
   androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_version"
   androidTestImplementation "androidx.compose.ui:ui-test-junit4:$composeLibraryVersion"
   debugImplementation("androidx.compose.ui:ui-test-manifest:$composeLibraryVersion")
