--- a/app/build.gradle
+++ b/app/build.gradle
@@ -200,6 +200,7 @@ dependencies {
   implementation "androidx.compose.ui:ui:$composeLibraryVersion"
   implementation "androidx.compose.foundation:foundation:$composeLibraryVersion"
   implementation "androidx.compose.foundation:foundation-layout:$composeLibraryVersion"
+  implementation "androidx.compose.material3:material3:$material3Version"
   implementation "androidx.compose.material:material:$composeLibraryVersion"
   implementation "androidx.compose.material:material-icons-extended:$composeLibraryVersion"
   implementation "androidx.compose.runtime:runtime:$composeLibraryVersion"
