--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ buildscript {
     legacy_support_version = "1.0.0"
     appcompat_version = "1.3.0"
     materialVersion = "1.6.1"
+    material3Version = "1.0.0-alpha16"
     preference_version = "1.1.0"
     test_runner_version = "1.4.0"
     test_rules_version = "1.4.0"
