Some animated navigation

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -212,6 +212,7 @@ dependencies {
   implementation "com.google.accompanist:accompanist-swiperefresh:$accompanistVersion"
   implementation "com.google.accompanist:accompanist-permissions:$accompanistVersion"
   implementation "com.google.accompanist:accompanist-systemuicontroller:$accompanistVersion"
+  implementation "com.google.accompanist:accompanist-navigation-animation:$accompanistVersion"
 
   // Better times
   implementation "com.jakewharton.threetenabp:threetenabp:$threetenabp_version"
