--- a/build.gradle
+++ b/build.gradle
@@ -4,10 +4,10 @@ buildscript {
   ext {
     // Compose compiler is highly coupled to Kotlin version
     // See https://developer.android.com/jetpack/androidx/releases/compose-kotlin#pre-release_kotlin_compatibility
-    composeCompilerVersion = "1.3.0"
+    composeCompilerVersion = "1.3.1"
     kotlinVersion = "1.7.10"
 
-    androidGradlePluginVersion = '7.3.0-rc01'
+    androidGradlePluginVersion = '7.3.0'
     build_tools_version = "30.0.3"
 
     multi_dex_version = "1.0.3"
@@ -25,6 +25,7 @@ buildscript {
     threetentest_version = "1.2.2"
     threetenabp_version = "1.2.2"
     jsoup_version = "1.7.3"
+    tagsoup_version = "1.2.1"
     readability4j_version = "1.0.5"
     retrofit_version = "2.9.0"
     qrgen_version = "2.6.0"
@@ -35,7 +36,7 @@ buildscript {
     legacy_support_version = "1.0.0"
     appcompat_version = "1.3.0"
     materialVersion = "1.6.1"
-    material3Version = "1.0.0-alpha16"
+    material3Version = "1.0.0-beta02"
     preference_version = "1.1.0"
     test_runner_version = "1.4.0"
     test_rules_version = "1.4.0"
@@ -46,11 +47,11 @@ buildscript {
     navVersion = "2.5.1"
     activityComposeVersion = "1.5.1"
     navigationComposeVersion = navVersion
-    composeLibraryVersion = "1.2.1"
+    composeLibraryVersion = "1.3.0-beta02"
     pagingVersion = "3.0.0"
     pagingComposeVersion = "1.0.0-alpha16"
-    accompanistVersion = "0.26.1-alpha"
-    coilVersion = "2.2.0"
+    accompanistVersion = "0.26.3-beta"
+    coilVersion = "2.2.1"
     androidWindowVersion = "1.0.0"
 
     // Tests
