--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,6 @@ buildscript {
     legacy_support_version = "1.0.0"
     appcompat_version = "1.3.0"
     materialVersion = "1.6.1"
-    material3Version = "1.0.0-beta02"
     preference_version = "1.1.0"
     test_runner_version = "1.4.0"
     test_rules_version = "1.4.0"
@@ -44,12 +43,11 @@ buildscript {
     savedstate_version = "1.1.0"
     roomVersion = "2.4.3"
     // Compose related below
-    navVersion = "2.5.1"
+    composeBomVersion = "2022.11.00"
     activityComposeVersion = "1.5.1"
-    navigationComposeVersion = navVersion
-    composeLibraryVersion = "1.3.0-beta02"
+//    navigationComposeVersion = "2.5.1"
     pagingVersion = "3.0.0"
-    pagingComposeVersion = "1.0.0-alpha16"
+    pagingComposeVersion = "1.0.0-alpha17"
     accompanistVersion = "0.26.3-beta"
     coilVersion = "2.2.1"
     androidWindowVersion = "1.0.0"
