--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:tools="http://schemas.android.com/tools"
   android:installLocation="internalOnly">
   <!-- Import export feeds -->
-  <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
+  <uses-permission
+    android:name="android.permission.READ_EXTERNAL_STORAGE"
     android:maxSdkVersion="28" />
-  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+  <uses-permission
+    android:name="android.permission.WRITE_EXTERNAL_STORAGE"
     android:maxSdkVersion="29" />
   <!-- For syncing -->
   <uses-permission android:name="android.permission.INTERNET" />
   <!-- To limit syncing to only WiFi -->
   <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-  <uses-permission android:name="android.permission.POST_NOTIFICATIONS"  />
+  <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
   <permission
     android:name="com.nononsenseapps.feeder.permission.read"
@@ -34,6 +35,7 @@
   <application
     android:name=".FeederApplication"
     android:allowBackup="true"
+    android:enableOnBackInvokedCallback="true"
     android:icon="@mipmap/ic_launcher"
     android:label="@string/app_name"
     android:roundIcon="@mipmap/ic_launcher_round"
@@ -173,7 +175,6 @@
       android:name=".contentprovider.RSSContentProvider"
       android:authorities="com.nononsenseapps.feeder.rssprovider"
       android:exported="true"
-      android:readPermission="com.nononsenseapps.feeder.permission.read"
-      />
+      android:readPermission="com.nononsenseapps.feeder.permission.read" />
   </application>
 </manifest>
